Added command line

--- a/app/composer.json
+++ b/app/composer.json
@@ -11,6 +11,12 @@
         "twig/twig": "^1.18",
         "monolog/monolog": "^1.15",
         "symfony/twig-bridge": "^2.7",
-        "josegonzalez/dotenv": "^1.0"
+        "josegonzalez/dotenv": "^1.0",
+        "knplabs/console-service-provider": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Omgcatz\\": "src"
+        }
     }
 }
