Started on process logic

--- a/app/composer.json
+++ b/app/composer.json
@@ -12,7 +12,8 @@
         "monolog/monolog": "^1.15",
         "symfony/twig-bridge": "^2.7",
         "josegonzalez/dotenv": "^1.0",
-        "knplabs/console-service-provider": "^1.0"
+        "knplabs/console-service-provider": "^1.0",
+        "symfony/process": "^2.7"
     },
     "autoload": {
         "psr-4": {
