--- a/app/composer.json
+++ b/app/composer.json
@@ -10,10 +10,10 @@
         "silex/silex": "~1.3",
         "twig/twig": "^1.18",
         "monolog/monolog": "^1.15",
-        "symfony/twig-bridge": "^2.7",
+        "symfony/twig-bridge": "3.0.2",
         "josegonzalez/dotenv": "^2.0",
         "knplabs/console-service-provider": "^1.0",
-        "symfony/process": "^2.7"
+        "symfony/process": "3.0.2"
     },
     "autoload": {
         "psr-4": {
