add basic download functionality

--- a/package.json
+++ b/package.json
@@ -39,9 +39,13 @@
   },
   "dependencies": {
     "electron-prebuilt": "^1.2.0",
+    "file-type": "^3.8.0",
     "lodash": "^4.13.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
-    "request": "^2.72.0"
+    "read-chunk": "^2.0.0",
+    "request": "^2.72.0",
+    "request-progress": "^2.0.1",
+    "temporary": "0.0.8"
   }
 }
