--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "catz",
   "version": "0.0.1",
   "description": "View and download kittehs",
-  "main": "./app/index.js",
+  "main": "./app/bootstrap.js",
   "scripts": {
     "start": "concurrently --kill-others --raw \"electron .\" \"webpack --config webpack.config.dev.js --watch\"",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --profile --colors",
@@ -28,9 +28,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.9.0",
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
+    "electron-prebuilt": "^1.2.0",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
@@ -38,7 +40,6 @@
     "webpack-livereload-plugin": "^0.8.1"
   },
   "dependencies": {
-    "electron-prebuilt": "^1.2.0",
     "file-type": "^3.8.0",
     "lodash": "^4.13.1",
     "react": "^15.1.0",
