--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "read-chunk": "^2.0.0",
     "request": "^2.72.0",
     "request-progress": "^2.0.1",
+    "sanitize-filename": "^1.6.0",
     "tmp": "0.0.28",
     "urlify": "^0.3.6"
   }
