add scss linter

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "css-loader": "^0.23.1",
     "electron-prebuilt": "^1.2.0",
     "node-sass": "^3.7.0",
+    "sass-lint": "^1.7.0",
     "sass-loader": "^3.2.0",
+    "sasslint-webpack-plugin": "^1.0.3",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-livereload-plugin": "^0.8.1"
