--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "license": "MIT",
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-core": "^6.9.0",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-airbnb": "^2.0.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.8",
