--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "main": "./app/bootstrap.js",
   "scripts": {
-    "start": "concurrently --kill-others --raw \"electron .\" \"webpack --config webpack.config.dev.js --watch\"",
+    "start": "concurrently --kill-others \"electron .\" \"webpack --config webpack.config.dev.js --watch\"",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --profile --colors",
     "electron": "cross-env NODE_ENV=production electron ."
   },
