--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "catz",
+  "license": "MIT",
   "private": true,
   "main": "./app/bootstrap.js",
   "scripts": {
-    "start": "concurrently --kill-others \"electron .\" \"webpack --config webpack.config.dev.js --watch\"",
+    "start": "concurrently --kill-others 'webpack --config webpack.config.dev.js --watch' 'electron .'",
+    "test": "mocha -t 100000000 --require babel-core/register --require babel-polyfill test/**/*.jsx",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js --progress --profile --colors",
     "electron": "cross-env NODE_ENV=production electron ."
   },
-  "license": "MIT",
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-airbnb": "^2.0.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
+    "chai": "^3.5.0",
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "electron-prebuilt": "^1.3.3",
+    "enzyme": "^2.4.1",
+    "mocha": "^3.0.2",
     "node-sass": "^3.7.0",
+    "react-addons-test-utils": "^15.3.0",
     "sass-lint": "^1.8.0",
     "sass-loader": "^3.2.0",
     "sasslint-webpack-plugin": "^1.0.3",
@@ -29,16 +34,20 @@
     "webpack-livereload-plugin": "^0.8.1"
   },
   "dependencies": {
+    "browser-id3-writer": "^2.3.1",
+    "file-exists": "^2.0.0",
     "file-type": "^3.8.0",
+    "left-pad": "^1.1.1",
     "lodash": "^4.13.1",
+    "md5": "^2.1.0",
     "open": "git+https://github.com/cadejscroggins/node-open.git",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "os-tmpdir": "^1.0.1",
+    "pretty-seconds": "^0.2.0",
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "read-chunk": "^2.0.0",
     "request": "^2.72.0",
     "request-progress": "^2.0.1",
-    "sanitize-filename": "^1.6.0",
-    "tmp": "0.0.28",
-    "urlify": "^0.3.6"
+    "sanitize-filename": "^1.6.0"
   }
 }
