--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron": "cross-env NODE_ENV=production electron ."
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.13.0",
     "babel-preset-airbnb": "^2.0.0",
