--- a/package.json
+++ b/package.json
@@ -19,20 +19,20 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "concurrently": "^2.1.0",
-    "cross-env": "^1.0.8",
-    "css-loader": "^0.23.1",
-    "electron-prebuilt": "^1.3.3",
+    "concurrently": "^3.1.0",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.25.0",
+    "electron": "^1.4.4",
     "enzyme": "^2.4.1",
     "mocha": "^3.0.2",
     "node-sass": "^3.7.0",
     "react-addons-test-utils": "^15.3.0",
     "sass-lint": "^1.8.0",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.0.2",
     "sasslint-webpack-plugin": "^1.0.3",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
-    "webpack-livereload-plugin": "^0.8.1"
+    "webpack-livereload-plugin": "^0.9.0"
   },
   "dependencies": {
     "browser-id3-writer": "^2.3.1",
