--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "type": "git",
     "url": "git://github.com/cadejscroggins/catz.git"
   },
-  "main": "bootstrap.js",
+  "main": "src/bootstrap.js",
   "scripts": {
-    "watch": "webpack --env.dev --watch",
     "build": "webpack --env.prod",
-    "electron": "electron .",
-    "start": "npm run watch"
+    "start": "webpack --env.dev --watch",
+    "electron": "electron ."
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
@@ -47,8 +46,7 @@
     "read-chunk": "^2.0.0",
     "request": "^2.78.0",
     "request-progress": "^3.0.0",
-    "sanitize-filename": "^1.6.1",
-    "soundcloud-resolve": "^1.0.2"
+    "sanitize-filename": "^1.6.1"
   },
   "license": "MIT",
   "private": true
