update dependencies and remove unnecessary ones

--- a/package.json
+++ b/package.json
@@ -13,37 +13,35 @@
     "electron": "electron ."
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-loader": "^6.2.7",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-airbnb": "^2.1.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
-    "css-loader": "^0.26.1",
-    "electron": "^1.4.11",
-    "gh-release": "^2.1.0",
-    "react-addons-test-utils": "^15.3.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-livereload-plugin": "^0.9.0",
-    "webpack-shell-plugin": "^0.4.9",
-    "webpack2-externals-plugin": "^1.0.0"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "css-loader": "^0.26.4",
+    "electron": "^1.6.2",
+    "gh-release": "^2.2.1",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-livereload-plugin": "^0.10.0",
+    "webpack-node-externals": "^1.5.4",
+    "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "browser-id3-writer": "^2.3.1",
-    "file-exists": "^2.0.0",
-    "file-type": "^3.9.0",
+    "browser-id3-writer": "^3.0.3",
+    "file-exists": "^3.0.2",
+    "file-type": "^4.1.0",
     "left-pad": "^1.1.3",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.4",
     "md5": "^2.2.1",
-    "open": "git+https://github.com/cadejscroggins/node-open.git",
+    "open": "https://github.com/cadejscroggins/node-open.git",
     "pretty-seconds": "^0.2.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "read-chunk": "^2.0.0",
-    "request": "^2.78.0",
+    "request": "^2.80.0",
     "request-progress": "^3.0.0",
     "sanitize-filename": "^1.6.1"
   },
