--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "webpack-shell-plugin": "^0.5.0"
   },
   "dependencies": {
-    "browser-id3-writer": "^3.0.3",
     "file-exists": "^3.0.2",
     "file-type": "^4.1.0",
     "left-pad": "^1.1.3",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
+    "node-id3": "^0.0.9",
     "open": "https://github.com/cadejscroggins/node-open.git",
     "pretty-seconds": "^0.2.1",
     "react": "^15.4.2",
